增加 eurake 和 fegin依赖

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,5 @@
-jdbc.url=jdbc:mysql://192.168.49.45:3306/showpic?useUnicode=true&amp;characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-jdbc.username=root
+jdbc.url=jdbc:mysql://192.168.50.103:3316/showpic?useUnicode=true&amp;characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc.username=user_fucent
 jdbc.password=fucent
 
 jdbc.initialSize=1
