--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,23 @@
 		<version.spring>3.2.9.RELEASE</version.spring>
 		<version.jackson>2.8.0</version.jackson>
 		<java.version>1.8</java.version>
+		<springcloud.version>1.3.5.RELEASE</springcloud.version>
 	</properties>
 
 	<dependencies>
 		<!--Spring Boot -->
+		<!-- 对于注册中心的支持 -->
+		 <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+            <version>${springcloud.version}</version>
+        </dependency>
+        <!-- 对于feign的支持 -->
+          <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+            <version>${springcloud.version}</version>
+        </dependency>
 		<!--支持 Web 应用开发，包含 Tomcat 和 spring-mvc。 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
