--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.6.RELEASE</version>
+		<version>1.5.9.RELEASE</version>
 	</parent>
 
 	<properties>
@@ -21,6 +21,7 @@
 		<version.jackson>2.8.0</version.jackson>
 		<java.version>1.8</java.version>
 		<springcloud.version>1.3.5.RELEASE</springcloud.version>
+		  <javax-mail.version>1.5.6</javax-mail.version>
 	</properties>
 
 	<dependencies>
@@ -93,7 +94,13 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
-
+		<!-- 拦截器start -->
+         <dependency>
+                <groupId>aopalliance</groupId>
+                <artifactId>aopalliance</artifactId>
+                <version>1.0</version>
+            </dependency>
+         <!-- 拦截器start -->
 		<!-- json依赖 -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
@@ -164,6 +171,17 @@
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
 		</dependency>
+		
+		  <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>${javax-mail.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>${javax-mail.version}</version>
+        </dependency>
 		<!-- lombok 依赖 start -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
