增加了权限的验证拦截 给予spring security

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
+		<!-- spring 安全认证 -->
+		  <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 		<!-- springboot 单元测试 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
