--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -13,3 +13,23 @@ health.config.enabled=true
 health.config.time-to-live=10000
 log.home=logs
 log.app=${spring.application.name}
+
+#management.security.enabled=false
+
+#安全认证 https://docs.spring.io/spring-boot/docs/current/reference/html/production-ready-monitoring.html
+management:
+  security:
+    enabled: true
+security:
+  user:
+    name: 123123
+    password: 123123
+  basic:
+    enabled: false
+endpoints:
+  enabled: true
+  sensitive: true
+  health:
+    sensitive: false
+  shutdown:
+    enabled: false
